# ragegun

./: .gitignore  Cargo.toml  build.rs  readme.md
src/: lib.rs  main.rs
src/analyzers/: mod.rs
src/analyzers/affection/: analyzer.rs  data.rs  mod.rs
src/analyzers/age/: analyzer.rs  data.rs  mod.rs
src/analyzers/distress/: analyzer.rs  data.rs  mod.rs
src/analyzers/emolex_all_languages/: analyzer.rs  data.rs  mod.rs
src/analyzers/emolex_english/: analyzer.rs  data.rs  mod.rs
src/analyzers/emolex_shared/: mod.rs
src/analyzers/gender/: analyzer.rs  data.rs  mod.rs
src/analyzers/perma/: analyzer.rs  data.rs  mod.rs
src/analyzers/temporal_orientation/: analyzer.rs  data.rs  mod.rs
src/assets/: age.rs  distress.rs  emolex.rs  gender.rs  mod.rs  perma.rs
src/assets/types/: mod.rs  rated.rs  values.rs  weighted.rs
src/text/: mod.rs
src/types/: mod.rs  rated.rs  weighted.rs  weighted_with_class.rs
