[package]
name = "ragegun"
version = "0.1.0"
edition = "2021"
description = "Performs lexica based analysis on text (i.e. age, gender, PERMA, OCEAN personality traits, ..)"
license = "MIT"
readme = "README.md"
build = "build.rs"
exclude = ["src/assets/files/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1.6"
lazy_static = "1.4.0"
ngram_iter = "0.1.0"
nlprule = "0.6.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"

[build-dependencies]
http_req = "0.9.0"
