[package]
name = "ragegun"
version = "0.2.2-alpha.0"
edition = "2021"
description = "Performs lexica based analysis on text (i.e. age, gender, PERMA, OCEAN personality traits, ..)"
license = "MIT"
readme = "README.md"
build = "build.rs"
exclude = ["src/assets/files/*"]


[features]
default = ["affection", "age", "gender", "distress", "emolex_english", "perma", "temporal"]
age = []
affection = []
distress = []
gender = []
perma = []
emolex_shared = []
emolex_english = ["emolex_shared"]
# all language emolex is 20MB
emolex_all_languages = ["emolex_shared"]
temporal = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1.6"
lazy_static = "1.4.0"
ngram_iter = "0.1.0"
nlprule = "0.6.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"

[build-dependencies]
http_req = "0.9.0"
